<resources>
    <string name="app_name">Smooth Portfolio</string>
    <string name="txt_nomeUsuario">Enrique Izel</string>
    <string name="txt_descricao">
        Enrique Izel é um desenvolvedor Android sênior com uma paixão inigualável pela criação de experiências digitais inovadoras.
        Com mais de uma década de experiência no desenvolvimento de aplicativos móveis, ela traz consigo um profundo entendimento
        do ecossistema Android e uma dedicação incansável à excelência técnica.
        \n\n\n
        <b>Habilidades</b>
        \n\n
        <b><font color='#FF0000'>Desenvolvimento Android</font></b>: Especialista em Kotlin, Leonardo possui uma profunda compreensão do desenvolvimento Android nativo,
        entregando aplicativos robustos e eficientes.
        \n\n
        <b><font color='#FF0000'>Arquitetura de Software</font></b>: Experiente na implementação de arquiteturas modernas como MVVM, Clean Architecture e Jetpack Compose,
        garantindo código modular e de fácil manutenção.
        \n\n
        <b><font color='#FF0000'>Testes Automatizados</font></b>: Firme defensor da qualidade do software, Leonardo implementa testes automatizados de unidade e UI
        para garantir a estabilidade e a confiabilidade de cada aplicativo.
        \n\n
        <b><font color='#FF0000'>Mentoria e Liderança Técnica</font></b>: Além de suas habilidades técnicas, Leonardo destaca-se como mentor, compartilhando conhecimento
        e orientando equipes para alcançarem seu melhor desempenho.
        \n\n
    </string>
    <string name="btn_projetos">Projetos</string>
    <string name="btn_contato">Contato</string>
    <string name="description_perfilUsuario">Foto de perfil do usuário</string>
    <string name="toolbar_contato">Contato</string>
    <string name="toolbar_projetos">Projetos</string>
    <string name="description_ic_celular">Icone de telefone</string>
    <string name="txt_celular">+55 92 99395-9291</string>
    <string name="description_ic_email">Ícone de email</string>
    <string name="txt_email">eleaoizel@gmail.com</string>
    <string name="txt_projeto1">Projeto Barbearia</string>
    <string name="txt_detalhes_do_projeto">Detalhes do Projeto</string>
    <string name="txt_projeto2">Projeto Pizzaria</string>
    <string name="txt_projeto3">Projeto Marcenaria</string>
</resources>